fix the share list overflow in the bottom

--- a/app/components/MainContainer.css
+++ b/app/components/MainContainer.css
@@ -16,6 +16,11 @@
   flex: 2;
   margin: 4px;
   overflow: hidden;
+  /*
+   * This is hacky, the goal is to avoid the scroller to overflow in the bottom
+   * because of the search bar and the .scroller { height: 100% }
+   */
+  padding-bottom: 50px;
 }
 
 .scroller {
